[package]
name = "ecdsa-sign-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.27.0", features = ["full"] }
secp256k1 = "0.27.0"
sha3 = "0.10.6"
bitcoin_hashes = "0.12.0"
web3 = "0.18.0"
web3_forked = { path = "../../../tomusdrw/rust-web3-forked" }
ethereum-types = "0.14.1"
rlp = "0.5.2"
hex-literal = "0.4.1"
